# generate_arrays

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
build-aux/: GetCompilerArgs.cmake  LibraryArgs.cmake
